add model metadata route
